--- a/Exercices/Lab-001.md
+++ b/Exercices/Lab-001.md
@@ -13,3 +13,6 @@ Il s'agit de déployer une application web basique dans un cluster kubernetes.
 - créer un déploiement à partir de l'image docker nginx
 - dans ce déploiement, monter sur le path `/usr/share/nginx/html`
 - exposer ce déploiement par un service de type `NodePort`
+
+
+[Retour](https://obeyler.github.io/Formation-K8S/)
