--- a/Exercices/Lab-001.md
+++ b/Exercices/Lab-001.md
@@ -1,4 +1,4 @@
-# Lab1
+# Lab-001-application de base
 ## Sujet
 Il s'agit de déployer une application web basique dans un cluster kubernetes.
 ```html
@@ -13,6 +13,7 @@ Il s'agit de déployer une application web basique dans un cluster kubernetes.
 - créer un déploiement à partir de l'image docker nginx
 - dans ce déploiement, monter sur le path `/usr/share/nginx/html`
 - exposer ce déploiement par un service de type `NodePort`
+- exposer via un ingress controller
 
 
 [Retour](https://obeyler.github.io/Formation-K8S/)
