--- a/Exercices/Lab-002.md
+++ b/Exercices/Lab-002.md
@@ -1,2 +1,10 @@
+# Lab-002-le placement 
+## Sujet jouer sur les placements
+Il s'agit de déployer regarder comment influencer le placement d'un pod dans un cluster kubernetes.
+- Faire 3 pods portés par un même deploiement, Les deux premiers doivent être placé sur un même node Master mais pas fixé sur un Node Master particulier
+- Faire 3 autres pod pour un autre deploiement qui ne devront jamais être sur le meme node
+- Imaginons qu'un des Workers tourne sur une architecture ARM les autres en AMD64, montrer comment faire en sorte que seul des pods dont les images sont compatibles puissent atterrir dessus.
+
+
 
 [Retour](https://obeyler.github.io/Formation-K8S/)
