--- a/Exercices/Lab-001.md
+++ b/Exercices/Lab-001.md
@@ -8,10 +8,10 @@ Il s'agit de déployer une application web basique dans un cluster kubernetes.
 ```
 
 ## Etapes
-- créer votre namespace `NOM-PRENOM`
+- créer votre namespace `LAB-NOM-PRENOM`
 - créer votre configMap avec le contenu de votre site 
-- créer un déploiement à partir de l'image docker nginx
-- dans ce déploiement, monter sur le path `/usr/share/nginx/html`
+- créer un déploiement à partir de l'image docker `nginx`
+- dans ce déploiement, monter sur la configmap sur le path `/usr/share/nginx/html`
 - exposer ce déploiement par un service de type `NodePort`
 - exposer via un ingress controller
 
