--- a/Exercices/Lab-003.md
+++ b/Exercices/Lab-003.md
@@ -48,7 +48,7 @@ spec:
 
 6) regarder les logs. Qui est maintenant vu comme utilisateur ? Peut-il interroger l'api kubernetes ?
 
-7) création d'un role qui permet de lister, et voir mais pas de détruire ni de créer des namespaces
+7) création d'un role qui permet de lister et voir, mais pas de détruire ni de créer des namespaces.
 
 8) création d'un roleBinding entre ce role et ce serviceAccount
 
