--- a/Exercices/Lab-003.md
+++ b/Exercices/Lab-003.md
@@ -32,7 +32,7 @@ spec:
     command:
     - sh
     - -c
-    - '/scripts/script.sh'
+    - 'sh /scripts/script.sh'
     volumeMounts:
     - name: script
       mountPath: /scripts/ 
