--- a/Exercices/Lab-003.md
+++ b/Exercices/Lab-003.md
@@ -14,7 +14,8 @@ script.sh
 export TOKEN=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
 curl -k https://kubernetes.default.svc/api/v1/namespaces/default/pods/ -H "Authorization: Bearer $TOKEN"; 
 ```
-
+> (dans kubernetes.default.svc/api/v1/namespaces/default/pods/ remplacer `default` par le nom du namespace créé )
+> 
 
 3) création d'un pod qui va utiliser cette configmap
 ```yaml
