--- a/Exercices/Lab-005.md
+++ b/Exercices/Lab-005.md
@@ -1,5 +1,15 @@
 # Lab-005- kustomize
 
+En prenant le résultat du Lab 4, ou d'un autre helm chart sur étagère cf  [Artifacthub.io](https://artifacthub.io).
+- valider le chart par son déploiement sur le cluster
+- utiliser la fonctionnalité [`helm template`](https://helm.sh/docs/helm/helm_template/) pour faire un fichier contenant tout ce que vous voulez installer.
+
+Vous avez désormais la contrainte de devoir livrer pour deux environnements : Dev et Prod
+- utiliser la fonctionnalité [`helm template`](https://helm.sh/docs/helm/helm_template/) sur votre chart pour faire un fichier contenant toute la base de ce que vous voulez installer.
+- créer deux overlay pour pouvoir deployer dans 2 environnements Dev et Prod via la commande `kubectl -k ...`
+
+Comparez les deux approches pour voir laquelle s'appliquera le mieux à votre contexte.
+> Les deux approches ne sont pas incompatibles et peuvent se completer.
 
 
 [Retour](https://obeyler.github.io/Formation-K8S/)
